# summary-prompt-lab

./: .gitignore  MODAL_SETUP.md  README.md  SETUP_GITHUB.md  modal_app.py  pyproject.toml  requirements.txt
api/: main.py
apps/: safety_cli.py  streamlit_app.py  streamlit_app_2.py  streamlit_app_mistral.py
archive/api/: main.py
archive/modal/: MODAL_SETUP.md
config/: .env.example  exercise_specific_prompts.json  exercise_system_prompts.json  models.env.example  prompts.yaml  recap_system_prompt.txt  safety_3tier_de.yaml  segment_switches.json  suicide_lexicon_de.yaml  synth_answers_prompt.txt  system_prompt_global.txt
config/prompts/: exercise_specific_prompts.json  recap_word_limits.json  summary_switch.json  synth_answers_prompt.txt  system_prompt_anweisungen.txt  system_prompt_ausgabeformat.txt  system_prompt_eingabeformat.txt  system_prompt_rolle.txt  system_prompt_stil.txt
data/processed/: kiso_app_merged_structured.json  kiso_app_storynodes_struct.json  questions_and_answers.json
notebooks/: 01_user_input.ipynb
scripts/: benchmark_mistral_latency.py
src/kiso_input/: __init__.py  config.py  process_user_input.py
src/kiso_input/processing/: __init__.py  classification.py  cloud_apis.py  formatting.py  gemini.py  local_models.py  normalization.py  prompts.py  recap_sections.py  segments.py
