[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "summary-prompt-lab"
version = "0.1.0"
description = "Streamlit app for exploring and testing summary prompt generation for Kiso Mind"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.28.0",
    "google-genai>=0.2.0",
    "mistralai>=1.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
local = [
    "llama-cpp-python>=0.2.0",
]

[tool.setuptools]
packages = ["kiso_input", "kiso_input.processing"]

[tool.setuptools.package-dir]
"" = "src"

